kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocker-api
  labels:
    app: stocker-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics/prometheus"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: stocker-api
